# flomo

./: Cargo.toml
src/: api.rs  cli.rs  config.rs  main.rs
