[package]
name = "flomo"
version = "0.1.0"
edition = "2021"
authors = ["Cheng Huang <cheng@duck.com>"]
repository = "https://github.com/huangcheng/flomo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
serde = { version = "1.0.162", features = ["derive"] }
toml = "0.7.3"
